--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -16,3 +16,5 @@ jobs:
           
           echo "## Model metrics" > report.md
           cat metrics.txt >> report.md
+          cml-publish confussion.png --md >> report.md
+          cml-send-comment report.md
